# app/Http/Controllers/API/BookController.php
@@ -21,8 +21,8 @@ class BookController extends Controller
 
     /** 
      * @OA\Get(
-     *     path="/api/books",
-     *     tags={"book"},
+     *     path="/api/book",
+     *     tags={"Book"},
      *     summary="Display a listing of the items",
      *     operationId="index",
      *     @OA\Response(
@@ -41,8 +41,8 @@ class BookController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/api/books",
-     *     tags={"book"},
+     *     path="/api/book",
+     *     tags={"Book"},
      *     summary="Store a newly created item",
      *     operationId="store",
      *     @OA\Response(
@@ -65,7 +65,8 @@ class BookController extends Controller
      *                      "description": "Menjadi sehat adalah impian semua orang. Makanan yang selama ini kita pikir sehat ternyata belum tentu 'sehat' bagi tubuh kita.",
      *                      "price": 85000}
      *         ),
-     *     )
+     *     ),
+     *      security={{"passport_token_ready":{}, "passport":{}}}
      * )
      */
 
@@ -85,15 +86,15 @@ class BookController extends Controller
             return $book;
 
         } catch(\Exception $exception) {
-            throw new HttpException(400, "Invalid Data : {&exception->getMessage}");
+            throw new HttpException(400, "Invalid Data : {$exception->getMessage()}");
         }
     }
 
 
     /**
      * @OA\Get(
-     *     path="/api/books/{id}",
-     *     tags={"book"},
+     *     path="/api/book/{id}",
+     *     tags={"Book"},
      *     summary="Display the specified item",
      *     operationId="show",
      *     @OA\Response(
@@ -137,8 +138,8 @@ class BookController extends Controller
 
     /**
      * @OA\Put(
-     *     path="/api/books/{id}",
-     *     tags={"book"},
+     *     path="/api/book/{id}",
+     *     tags={"Book"},
      *     summary="Update the specified item",
      *     operationId="update",
      *     @OA\Response(
@@ -177,10 +178,11 @@ class BookController extends Controller
      *                      "price": 85000}
      *         ),
      *     ),
+     *      security={{"passport_token_ready":{}, "passport":{}}}
      * )
      */
 
-    public function update(Request $request, $id)
+    public function update(Request $request, string $id)
     {
         $book = Book::find($id);
         if(!$book){
@@ -199,14 +201,14 @@ class BookController extends Controller
            return response()->json(array('message'=>'Updated successfully'), 200);
 
         } catch(\Exception $exception) {
-            throw new HttpException(400, "Invalid Data : {&exception->getMessage(}");
+            throw new HttpException(400, "Invalid Data : {$exception->getMessage()}");
         }
     }
 
     /**
      * @OA\Delete(
-     *     path="/api/books/{id}",
-     *     tags={"book"},
+     *     path="/api/book/{id}",
+     *     tags={"Book"},
      *     summary="Remove the specified item",
      *     operationId="destroy",
      *     @OA\Response(
@@ -234,10 +236,11 @@ class BookController extends Controller
      *             format="int64"
      *         )
      *     ),
+     *      security={{"passport_token_ready":{}, "passport":{}}}
      * )
      */
     
-    public function destroy($id)
+    public function destroy(string $id)
     {
         $book = Book::find($id);
         if(!$book){
